ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
  - http:
      paths:
      - path: /service1
        pathType: Prefix
        backend:
          service:
            name: solit-nginx-solit
            port:
              number: 80
      - path: /service2
        pathType: Prefix
        backend:
          service:
            name: eden-app-weather
            port:
              number: 80
